EMC-130: fixed incorrect FileNotFound exception handling and other minor improvements